--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "github",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.4.1"
+    "ejs": "^2.4.1",
+    "express": "latest",
+    "path": "^0.12.7"
   }
 }
