--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "5.6.0"
+    "node": "5.6.0",
+    "npm": "3.10.6"
   },
   "author": "",
   "license": "ISC",
