--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angularjs": "0.0.1",
+    "connect": "^3.5.0",
     "ejs": "^2.4.1",
     "express": "^4.14.0",
     "foreman": "^2.0.0"
